# palworld-save-pal

./: .dockerignore  .gitattributes  .gitignore  AUTO-LOAD-FEATURE.md  C  Cargo.toml  Dockerfile  README.md  build-desktop.ps1  build-desktop.sh  build-docker.ps1  build-docker.sh  build_windows.py  bump.ps1  convert.py  debug.bat  desktop.py  desktop.spec  docker-compose.yml  package.json  psp.py  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  settings.py  setup.py  svelte.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
backend/: README.md  main.py
contract/: README.md
docs/: api.md  architecture.md  rust-dev-guide.md
frontend/: .prettierrc  bun.lockb  package-lock.json  package.json  svelte.config.js  vite.config.ts
linux_scripts/: debug.sh
palworld_save_pal/: __version__.py  server_thread.py  state.py
psp-core/: Cargo.toml
psp-core/src/: convert.rs  error.rs  gamedata.rs  lib.rs  localdata.rs  palbin.rs  paths.rs  progress.rs  props.rs  savio.rs  session.rs  steam_id.rs  transfer.rs  ue.rs
psp-core/src/domain/: containers.rs  gps.rs  guild.rs  guild_tail.rs  mod.rs  pal.rs  player.rs  raw.rs  relic.rs  summaries.rs  uid_swap.rs  world.rs  world_option.rs
psp-core/src/domain/world_option/: world_option_corpus.rs
psp-core/src/dto/: container.rs  gamepass.rs  guild.rs  mod.rs  ordered_map.rs  pal.rs  player.rs  settings.rs  summary.rs  world_option.rs
psp-core/src/gamepass/: convert.rs  fixture.rs  format.rs  mod.rs  scan.rs  store.rs
psp-core/tests/: boss_defeat.rs  delete_ops.rs  fixtures_v1.rs  gamedata_keys.rs  gps.rs  guild_details.rs  guild_tail.rs  pal_crud.rs  pal_images.rs  pal_read.rs  pal_write.rs  perf_player_details.rs  player_details.rs  relic.rs  resave_bytes.rs  save_writeback.rs  schema_priming.rs  schema_tags.rs  status_names.rs  steam_id.rs  transfer.rs  uid_swap.rs  world_index.rs
psp-core/tests/common/: mod.rs
psp-core/tests/fixtures/: steam_id_vectors.json
psp-desktop/: Cargo.toml  tauri.conf.json
psp-desktop/src/: main.rs
psp-server/: Cargo.toml
psp-server/src/: api_convert.rs  desktop_dialogs.rs  dispatcher.rs  emitter.rs  envelope.rs  handler_error.rs  lib.rs  messages.rs  static_files.rs  ws.rs
psp-server/src/handlers/: game_data.rs  gamepass.rs  gps.rs  guilds.rs  mod.rs  pals.rs  players.rs  presets.rs  save_file.rs  servers.rs  session.rs  settings.rs  system.rs  tools.rs  ups.rs  world_option.rs
psp-server/src/services/: docker.rs  docker_mods.rs  mod.rs  native_config.rs  native_mods.rs  native_process.rs  palworld_api.rs
psp-server/tests/: api_convert.rs  desktop_config.rs  desktop_convert_extract.rs  desktop_convert_select.rs  desktop_editor_save.rs  desktop_open_folder.rs  desktop_presets.rs  desktop_select_save.rs  desktop_transfer_select.rs  desktop_unlock_map.rs  http_static.rs  legacy_import_startup.rs  load_path.rs  parity.rs  phase2_ws.rs  phase4_ws.rs  presets_ws.rs  save_reload_cycle.rs  server_lifecycle.rs  session_persistence_ws.rs  session_store_ws.rs  tools_ws.rs  transfer_ws.rs  ups_collections_tags_ws.rs  ups_session_ws.rs  ups_ws.rs  wire_contract.rs  ws_integration.rs
psp-server/tests/common/: mod.rs
rust/: .gitignore  Cargo.toml
rust/parity/: README.md
rust/psp-core/: Cargo.toml
rust/psp-core/src/: convert.rs  gamedata.rs  lib.rs  localdata.rs  palbin.rs  progress.rs  props.rs  savio.rs  session.rs  steam_id.rs  transfer.rs
rust/psp-core/src/domain/: containers.rs  gps.rs  guild.rs  guild_tail.rs  mod.rs  pal.rs  player.rs  summaries.rs  uid_swap.rs  world.rs
rust/psp-core/src/dto/: gamepass.rs  mod.rs  ordered_map.rs  pal.rs  player.rs  settings.rs  summary.rs
rust/psp-core/src/gamepass/: convert.rs  fixture.rs  format.rs  mod.rs  scan.rs  store.rs
rust/psp-core/tests/: delete_ops.rs  gps.rs  guild_details.rs  guild_tail.rs  pal_crud.rs  pal_read.rs  pal_write.rs  perf_player_details.rs  player_details.rs  resave_bytes.rs  save_writeback.rs  steam_id.rs  transfer.rs  uid_swap.rs  world_index.rs
rust/psp-core/tests/common/: mod.rs
rust/psp-db/: Cargo.toml
rust/psp-db/migrations/: 0001_settings.sql  0004_servers.sql
rust/psp-db/src/: error.rs  import_legacy.rs  lib.rs  servers.rs  settings.rs  time.rs  ups.rs
rust/psp-db/tests/: import_legacy.rs  presets.rs  servers.rs  settings.rs  ups_crud.rs  ups_mutations.rs  ups_queries.rs
rust/psp-db/tests/fixtures/: legacy_psp.db
rust/psp-desktop/: Cargo.toml  tauri.conf.json
rust/psp-desktop/icons/: icon.icns
rust/psp-desktop/src/: main.rs
rust/psp-server/: Cargo.toml
rust/psp-server/src/: desktop_dialogs.rs  dispatcher.rs  emitter.rs  handler_error.rs  lib.rs  main.rs  messages.rs  router.rs  ws.rs
rust/psp-server/src/handlers/: game_data.rs  gamepass.rs  gps.rs  mod.rs  pals.rs  players.rs  presets.rs  save_file.rs  servers.rs  session.rs  settings.rs  system.rs  tools.rs  ups.rs
rust/psp-server/src/services/: docker.rs  docker_mods.rs  mod.rs  native_config.rs  native_mods.rs  native_process.rs  palworld_api.rs
rust/psp-server/tests/: api_convert.rs  gps_ws.rs  http_static.rs  legacy_import_startup.rs  load_path.rs  parity.rs  phase2_ws.rs  phase4_ws.rs  presets_ws.rs  save_reload_cycle.rs  server_lifecycle.rs  session_persistence_ws.rs  session_store_ws.rs  tools_ws.rs  ups_session_ws.rs  ups_ws.rs  ws_integration.rs
rust/psp-server/tests/common/: mod.rs
scripts/: README.md  appimage-strip-graphics.sh  build-desktop.ps1  build-desktop.sh  build-docker.ps1  build-docker.sh  build-ui-desktop.ps1  build-ui-desktop.sh  build_windows.py  bump.ps1  capture_parity.py  compare.py  debug.sh  fetch_media.py  gen-relic-data.mjs  gen-relic-icons.mjs  gen-relic-l10n.mjs  gen_steam_id_vectors.py  make_legacy_db_fixture.py  pals.json
shared/: API_MESSAGES.md  README.md  generate-types.ps1  generate_types.py  models.py  types.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
tests/: README.md  conftest.py  test_save_file.py
ui/: .prettierrc  bun.lockb  package-lock.json  package.json  remark-toc-headings.js  svelte.config.js  tailwind.config.ts  (+2 more)
(+1099 files in other folders)
