[package]
name = "psp-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
psp-server = { path = "../psp-server" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
