[package]
name = "psp-server"
version.workspace = true
edition.workspace = true

[dependencies]
psp-core = { workspace = true }
psp-db = { workspace = true }
uesave = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
percent-encoding = { workspace = true }
zip = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
